@@ -166,6 +166,9 @@ ScummVM Team
 
   Backend Teams
   -------------
+    Android:
+       Angus Lees
+
     Dreamcast:
        Marcus Comstedt
 
